Fix dark theme scrollbars

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,11 @@ body,
 #root {
   height: 100vh;
 }
+
+[data-color-scheme="dark"] {
+  color-scheme: dark;
+}
+
+[data-color-scheme="light"] {
+  color-scheme: light;
+}
